# lambdacube-gl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SampleIR.hs  lambdacube-gl-ir.cabal  lambdacube-gl.cabal  stack.yaml
Backend/: GL.hs
Backend/GL/: Backend.hs  Data.hs  Input.hs  Mesh.hs  Type.hs  Util.hs
examples/: Hello.hs  HelloEmbedded.hs  HelloJson.hs  HelloOBJ.hs  LICENSE  MtlParser.hs  README  cube.mtl  hello.json  hello.lc  hello_obj.json  hello_obj.lc  lambdacube-gl-examples.cabal  pickInt.hs  pickInt.json  pickInt.lc  pickIntDraw.json  pickIntDraw.lc
src/LambdaCube/: GL.hs
src/LambdaCube/GL/: Backend.hs  Data.hs  Input.hs  Mesh.hs  Type.hs  Util.hs
testclient/: client.hs
