name:                lambdacube-gl
version:             0.4.0.0
synopsis:            OpenGL 3.3 Core Profile backend for LambdaCube 3D
description:         github: https://github.com/lambdacube3d/lambdacube-gl
homepage:            lambdacube3d.com
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska, Peter Divianszky
maintainer:          csaba.hruska@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple

extra-source-files:  examples/Hello.hs
                     examples/HelloEmbedded.hs
                     examples/hello.json
                     examples/hello.lc
                     examples/logo.png

cabal-version:       >=1.10

library
  exposed-modules:
    LambdaCube.GL
    LambdaCube.GL.Backend
    LambdaCube.GL.Data
    LambdaCube.GL.Input
    LambdaCube.GL.Mesh
    LambdaCube.GL.Type
    LambdaCube.GL.Util
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.7 && <4.9,
    containers >=0.5 && <0.6, 
    mtl >=2.2 && <2.3, 
    bytestring >=0.10 && <0.11, 
    vector >=0.11 && <0.12, 
    vector-algorithms >=0.7 && <0.8, 
    JuicyPixels >=3.2.7 && <3.3,
    OpenGLRaw >=3.1 && <3.2, 
    lambdacube-ir == 0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
