name:                lambdacube-gl-examples
version:             0.1.0.0
synopsis:            Basic example for LambdaCube 3D Haskell OpenGL backend
-- description:         
homepage:            http://lambdacube3d.com/getting-started
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  hello.lc
                     hello.json
cabal-version:       >=1.10

executable hello-gl
  main-is:             Hello.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5 && <0.6,
                       vector >=0.11 && <0.12,
                       JuicyPixels >=3.2 && <3.3,
                       aeson >=0.9 && <0.11,
                       bytestring >=0.10 && <0.11,
                       GLFW-b >=1.4 && <1.5,
                       lambdacube-gl >=0.4 && <0.5
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable hello-gl-embedded
  main-is:             HelloEmbedded.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5 && <0.6,
                       vector >=0.11 && <0.12,
                       JuicyPixels >=3.2 && <3.3,
                       aeson >=0.9 && <0.11,
                       bytestring >=0.10 && <0.11,
                       GLFW-b >=1.4 && <1.5,
                       lambdacube-gl >=0.4 && <0.5,
                       lambdacube-compiler >=0.4 && <0.5
  -- hs-source-dirs:      
  default-language:    Haskell2010

